--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -704,7 +704,7 @@ ul#menu-v, #menu-v ul
     font-size: 14px;
     padding: 5px;
     text-align: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(247, 163, 92);
     margin: 0;
 }
 
@@ -713,19 +713,27 @@ ul#menu-v, #menu-v ul
     text-align: center;
     height: 100px;
     padding-top: 20px;
-    border: 1px solid #ddd;
-    color: #666;
+    border: 1px solid rgb(247, 163, 92);
+    border-bottom: 1px solid #fff;
+    color: #1AADCE;
+}
+
+#pie {
+  height: 300px;
+  width: 100%;
+  margin-top: 40px;
 }
 
 
 .stats .values{
     display: block;
-    color: rgb(247, 163, 92);    
+    color: #fff;    
     text-transform: uppercase;
     font-size: 16px;
     padding: 5px;
     text-align: center;
-    border-bottom: 1px solid rgb(247, 163, 92); 
+    background-color: #1AADCE;
+    border-bottom: 1px solid #fff;
     margin: 0;
 }
 
